Fix spacing before the app bar divider

--- a/webapp/channels/src/components/app_bar/app_bar.scss
+++ b/webapp/channels/src/components/app_bar/app_bar.scss
@@ -122,7 +122,7 @@ $app-bar-width: 48px;
         .app-bar__divider {
             width: 28px;
             border-top: 1px solid rgba(var(--center-channel-color-rgb), 0.16);
-            margin-top: 14px;
+            margin-top: 0px;
             margin-bottom: 14px;
         }
 
